🚅🚦 Checkpoint ./index.html:33818363/1961 ./style.css:33818363/2 ./.glitch-assets:33818363/963

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         Featured product
       </h1>
       <div class="fs">
-        <div class="fs-price">title</div>
+        <div class="fs-price">Sony PS5 PlayStation 5</div>
         <a
           target="_blank"
           href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
@@ -70,7 +70,8 @@
             src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
           />
         </a>
-        <div class="fsdesc">Add a description of the image here</div>
+        <div class="fsdesc">The Sony PlayStation 5 (US Plug) Blu-ray Edition Console is the hottest release of 2020. <br>
+          This version includes a Blu-ray disc drive, unlike the Digital Edition which does not. </div>
       </div>
 
       <br />
@@ -81,16 +82,16 @@
             Best Selling
           </h1>
           <div class="bs">
-            <div class="bs-price">title</div>
+            <div class="bs-price">Razer Blackshark V2</div>
             <a
               target="_blank"
-              href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+              href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2578069c-7d5f-42e6-bab5-c2f33dccc29d.image.png?v=1628612047339"
             >
               <img
-                src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+                src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2578069c-7d5f-42e6-bab5-c2f33dccc29d.image.png?v=1628612047339"
               />
             </a>
-            <div class="bsdesc">Add a description of the image here</div>
+            <div class="bsdesc">If competing is your calling, answer it with the Razer BlackShark V2 Pro—the definitive esports gaming headset, unleashed.</div>
           </div>
         </div>
         <div id="lp">
@@ -99,16 +100,16 @@
             Latest Products
           </h1>
           <div class="lp">
-            <div class="lp-price">title</div>
+            <div class="lp-price">GeForce RTX 3060</div>
             <a
               target="_blank"
-              href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2c9826c1-9463-44ac-8cc8-d76b46f8636d.image.png?v=1628612189348"
             >
               <img
-                src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+                src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2c9826c1-9463-44ac-8cc8-d76b46f8636d.image.png?v=1628612189348"
               />
             </a>
-            <div class="lpdesc">Add a description of the image here</div>
+            <div class="lpdesc">If you are in the market for a brand new graphics card from NVIDIA and EVGA, look no further than the NVIDIA EVGA GeForce RTX 3060 XC. </div>
           </div>
         </div>
       </div>
