🐘✈️ Checkpoint ./style.css:33818363/63 ./.glitch-assets:33818363/20765 ./project.html:33818363/559

--- a/project.html
+++ b/project.html
@@ -58,16 +58,16 @@
     <br />
     <!--Gaming PC-->
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$520</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2c9826c1-9463-44ac-8cc8-d76b46f8636d.image.png?v=1628612189348"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2c9826c1-9463-44ac-8cc8-d76b46f8636d.image.png?v=1628612189348"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">GeForce RTX 3060 12GB XC Graphics Card</div>
     </div>
 
     <div class="pc">
