⛑📺 Checkpoint ./.glitch-assets:33818363/3140 ./project.html:33818363/2305 ./style.css:33818363/52

--- a/project.html
+++ b/project.html
@@ -71,55 +71,55 @@
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$1359</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F203c14c2-6a3f-4fb0-8941-c0e74d843b64.image.png?v=1628613029334"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F203c14c2-6a3f-4fb0-8941-c0e74d843b64.image.png?v=1628613029334"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc"> CLX SET GAMING PC -AMD Ryzen 9 3.90Ghz </div>
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$150</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F792b1fbb-f4a7-4221-b12e-8fb2fdc286f7.image.png?v=1628613395915"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F792b1fbb-f4a7-4221-b12e-8fb2fdc286f7.image.png?v=1628613395915"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">SteelSeries Apex 7 TKL Wired Gaming</div>
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$120</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2578069c-7d5f-42e6-bab5-c2f33dccc29d.image.png?v=1628612047339"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2578069c-7d5f-42e6-bab5-c2f33dccc29d.image.png?v=1628612047339"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">RAZER Razer Blackshark V2</div>
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$299</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F492fb948-5fa4-4887-8e40-5afa10282109.image.png?v=1628613617712"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F492fb948-5fa4-4887-8e40-5afa10282109.image.png?v=1628613617712"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">ASUS VG279Q - LED Monitor - Full HD (1080P</div>
     </div>
 
     <div class="pc">
