🌁🛍 Checkpoint ./.glitch-assets:33818363/1418 ./project.html:33818363/2279 ./style.css:33818363/447

--- a/project.html
+++ b/project.html
@@ -119,46 +119,47 @@
           src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F492fb948-5fa4-4887-8e40-5afa10282109.image.png?v=1628613617712"
         />
       </a>
-      <div class="pcdesc">ASUS VG279Q - LED Monitor - Full HD (1080P</div>
+      <div class="pcdesc">ASUS VG279Q - LED Monitor - Full HD</div>
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$35</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9c723821-cb89-45cc-8534-a11672879d24.image.png?v=1628613775383"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9c723821-cb89-45cc-8534-a11672879d24.image.png?v=1628613775383"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">
+Razer Deathadder V2 Mini Gaming Mouse</div>
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$400</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8e1382d7-cd24-4c68-bf3d-d891fe82128f.image.png?v=1628613694108"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8e1382d7-cd24-4c68-bf3d-d891fe82128f.image.png?v=1628613694108"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">LG 32" Ultragear QHD LED</div>
     </div>
 
     <div class="pc">
-      <div class="pc-price">$323</div>
+      <div class="pc-price">$1099</div>
       <a
         target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ffe78ece3-def8-4da0-a6f6-4f7a06ae1378.image.png?v=1628613951623"
       >
         <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ffe78ece3-def8-4da0-a6f6-4f7a06ae1378.image.png?v=1628613951623"
         />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">Skytech Archangel Gaming Computer PC </div>
     </div>
     <br />
 
@@ -169,16 +170,16 @@
           Playstation Products
         </h1>
         <div class="ps">
-          <div class="ps-price">title</div>
+          <div class="ps-price">$659</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F14f54822-44df-4766-9001-d54b8204be3c.image.png?v=1628614156432"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F14f54822-44df-4766-9001-d54b8204be3c.image.png?v=1628614156432"
             />
           </a>
-          <div class="psdesc">Add a description of the image here</div>
+          <div class="psdesc">Sony PS5 PlayStation 5</div>
         </div>
 
         <div class="ps">
