🍴🚵 Checkpoint ./style.css:33818363/21 ./.glitch-assets:33818363/1912 ./project.html:33818363/2336

--- a/project.html
+++ b/project.html
@@ -183,42 +183,42 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
         </div>
 
         <div class="ps">
-          <div class="ps-price">title</div>
+          <div class="ps-price">$80</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe2dfd4aa-1d45-401f-80e5-0656dc7341fb.image.png?v=1628614457249"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe2dfd4aa-1d45-401f-80e5-0656dc7341fb.image.png?v=1628614457249"
             />
           </a>
-          <div class="psdesc">Add a description of the image here</div>
+          <div class="psdesc">PlayStation 5 Pulse 3D Wireless Headset</div>
         </div>
 
         <div class="ps">
-          <div class="ps-price">title</div>
+          <div class="ps-price">$350</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F658ced3d-7272-4ffa-8156-03031a5eecce.image.png?v=1628614544120"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F658ced3d-7272-4ffa-8156-03031a5eecce.image.png?v=1628614544120"
             />
           </a>
-          <div class="psdesc">Add a description of the image here</div>
+          <div class="psdesc">Sony PS4 PlayStation 4 </div>
         </div>
 
         <div class="ps">
-          <div class="ps-price">title</div>
+          <div class="ps-price">$30</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fbefbea18-7286-491e-8582-526a90b639a8.image.png?v=1628614628656"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fbefbea18-7286-491e-8582-526a90b639a8.image.png?v=1628614628656"
             />
           </a>
-          <div class="psdesc">Add a description of the image here</div>
+          <div class="psdesc">Sony PS5 PlayStation 5 Wireless Controller</div>
         </div>
       </div>
 
@@ -270,10 +270,10 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
           <div class="xbox-price">title</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9b1df3eb-411a-4476-9785-19a3d4e51252.image.png?v=1628614847237"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9b1df3eb-411a-4476-9785-19a3d4e51252.image.png?v=1628614847237"
             />
           </a>
           <div class="xboxdesc">Add a description of the image here</div>
