--- a/project.html
+++ b/project.html
@@ -228,55 +228,53 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
           Xbox Products
         </h1>
         <div class="xbox">
-          <div class="xbox-price">title</div>
+          <div class="xbox-price">$599</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fa851774f-e39e-48a9-9af3-f6d58d0db477.image.png?v=1628615254783"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fa851774f-e39e-48a9-9af3-f6d58d0db477.image.png?v=1628615254783"
             />
           </a>
-          <div class="xboxdesc">Add a description of the image here</div>
+          <div class="xboxdesc">Microsoft Xbox Series X</div>
         </div>
-
+        <div class="xbox">
+          <div class="xbox-price">$599</div>
+          <a
+            target="_blank"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fa851774f-e39e-48a9-9af3-f6d58d0db477.image.png?v=1628615254783"
+          >
+            <img
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fa851774f-e39e-48a9-9af3-f6d58d0db477.image.png?v=1628615254783"
+            />
+          </a>
+          <div class="xboxdesc">Microsoft Xbox Series X</div>
+        </div>
         <div class="xbox">
           <div class="xbox-price">title</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ffa23bdea-4294-45c3-b9a4-9537677600ce.image.png?v=1628615122622"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ffa23bdea-4294-45c3-b9a4-9537677600ce.image.png?v=1628615122622"
             />
           </a>
-          <div class="xboxdesc">Add a description of the image here</div>
+          <div class="xboxdesc"></div>
         </div>
 
         <div class="xbox">
-          <div class="xbox-price">title</div>
+          <div class="xbox-price">$329</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ffa23bdea-4294-45c3-b9a4-9537677600ce.image.png?v=1628615122622"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ffa23bdea-4294-45c3-b9a4-9537677600ce.image.png?v=1628615122622"
             />
           </a>
-          <div class="xboxdesc">Add a description of the image here</div>
-        </div>
-
-        <div class="xbox">
-          <div class="xbox-price">title</div>
-          <a
-            target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9b1df3eb-411a-4476-9785-19a3d4e51252.image.png?v=1628614847237"
-          >
-            <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9b1df3eb-411a-4476-9785-19a3d4e51252.image.png?v=1628614847237"
-            />
-          </a>
-          <div class="xboxdesc">Add a description of the image here</div>
+          <div class="xboxdesc">Microsoft Xbox One X </div>
         </div>
       </div>
     </div>
