🍁👵 Checkpoint ./project.html:33818363/3368 ./.glitch-assets:33818363/1928

--- a/project.html
+++ b/project.html
@@ -289,55 +289,55 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
           Video Games
         </h1>
         <div class="games">
-          <div class="games-price">title</div>
+          <div class="games-price">$25</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ff4109a33-1532-4493-b90f-e98f3cb1d47e.image.png?v=1628620407969"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Ff4109a33-1532-4493-b90f-e98f3cb1d47e.image.png?v=1628620407969"
             />
           </a>
-          <div class="gamesdesc">Add a description of the image here</div>
+          <div class="gamesdesc">PS5 NBA 2K21</div>
         </div>
 
         <div class="games">
-          <div class="games-price">title</div>
+          <div class="games-price">$20</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F7687011f-002d-4d73-b6aa-1a01accad2c6.image.png?v=1628620541648"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F7687011f-002d-4d73-b6aa-1a01accad2c6.image.png?v=1628620541648"
             />
           </a>
-          <div class="gamesdesc">Add a description of the image here</div>
+          <div class="gamesdesc">PS5 Marvel's Spider</div>
         </div>
 
         <div class="games">
-          <div class="games-price">title</div>
+          <div class="games-price">$40</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8ed1cd35-3c24-4c2e-ae09-4967892bde77.image.png?v=1628620524805"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8ed1cd35-3c24-4c2e-ae09-4967892bde77.image.png?v=1628620524805"
             />
           </a>
-          <div class="gamesdesc">Add a description of the image here</div>
+          <div class="gamesdesc">Nintendo Switch Super Mario Odyssey</div>
         </div>
 
         <div class="games">
-          <div class="games-price">title</div>
+          <div class="games-price">$35</div>
           <a
             target="_blank"
-            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+            href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9d1c0248-0cb9-4e4b-aea3-077c46cd0226.image.png?v=1628620531689"
           >
             <img
-              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
+              src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9d1c0248-0cb9-4e4b-aea3-077c46cd0226.image.png?v=1628620531689"
             />
           </a>
-          <div class="gamesdesc">Add a description of the image here</div>
+          <div class="gamesdesc">Xbox Series X/One Call of Duty</div>
         </div>
       </div>
 
