🌝⛷ Checkpoint ./.glitch-assets:33818363/1914 ./project.html:33818363/320

--- a/project.html
+++ b/project.html
@@ -347,7 +347,7 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
           Other products
         </h1>
         <div class="other">
-          <div class="other-price">title</div>
+          <div class="other-price">$250</div>
           <a
             target="_blank"
             href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
@@ -356,11 +356,11 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
               src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
             />
           </a>
-          <div class="otherdesc">Add a description of the image here</div>
+          <div class="otherdesc">Nintendo Switch - Mario Red & Blue </div>
         </div>
 
         <div class="other">
-          <div class="other-price">title</div>
+          <div class="other-price">$60</div>
           <a
             target="_blank"
             href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
@@ -369,11 +369,11 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
               src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
             />
           </a>
-          <div class="otherdesc">Add a description of the image here</div>
+          <div class="otherdesc">Xbox Space Jam controller</div>
         </div>
 
         <div class="other">
-          <div class="other-price">title</div>
+          <div class="other-price">$500</div>
           <a
             target="_blank"
             href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
@@ -382,11 +382,11 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
               src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
             />
           </a>
-          <div class="otherdesc">Add a description of the image here</div>
+          <div class="otherdesc">Oculus Quest 2 256GB</div>
         </div>
 
         <div class="other">
-          <div class="other-price">title</div>
+          <div class="other-price">$1500</div>
           <a
             target="_blank"
             href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
@@ -395,7 +395,7 @@ Razer Deathadder V2 Mini Gaming Mouse</div>
               src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185"
             />
           </a>
-          <div class="otherdesc">Add a description of the image here</div>
+          <div class="otherdesc">GeForce RTX 3080 ULTRA Graphics Card</div>
         </div>
       </div>
     </div>
