--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@
             src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
           />
         </a>
-        <div class="fsdesc">The Sony PlayStation 5 (US Plug) Blu-ray Edition Console is the hottest release of 2020. <br>
-          This version includes a Blu-ray disc drive, unlike the Digital Edition which does not. </div>
+        <div class="fsdesc">
+          The Sony PlayStation 5 (US Plug) Blu-ray Edition Console is the
+          hottest release of 2020. <br />
+          This version includes a Blu-ray disc drive, unlike the Digital Edition
+          which does not.
+        </div>
       </div>
 
       <br />
@@ -91,7 +95,10 @@
                 src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2578069c-7d5f-42e6-bab5-c2f33dccc29d.image.png?v=1628612047339"
               />
             </a>
-            <div class="bsdesc">If competing is your calling, answer it with the Razer BlackShark V2 Pro—the definitive esports gaming headset, unleashed.</div>
+            <div class="bsdesc">
+              If competing is your calling, answer it with the Razer BlackShark
+              V2 Pro—the definitive esports gaming headset, unleashed.
+            </div>
           </div>
         </div>
         <div id="lp">
@@ -109,7 +116,11 @@
                 src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2c9826c1-9463-44ac-8cc8-d76b46f8636d.image.png?v=1628612189348"
               />
             </a>
-            <div class="lpdesc">If you are in the market for a brand new graphics card from NVIDIA and EVGA, look no further than the NVIDIA EVGA GeForce RTX 3060 XC. </div>
+            <div class="lpdesc">
+              If you are in the market for a brand new graphics card from NVIDIA
+              and EVGA, look no further than the NVIDIA EVGA GeForce RTX 3060
+              XC.
+            </div>
           </div>
         </div>
       </div>
